--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -7,5 +7,11 @@
     <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
         <item name="android:background">#76c2af</item>
     </style>
+    
+  <style name="MyDialog" parent="@android:style/Theme.Dialog">
+        
+        <item name="android:windowBackground">@android:color/holo_purple</item>
+  
+    </style>
 
 </resources>
