--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     tools:context="${relativePackage}.${activityClass}" >
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/lvOffers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
        
