--- a/res/layout/activity_map.xml
+++ b/res/layout/activity_map.xml
@@ -21,13 +21,13 @@
             android:paddingBottom="5dp"
             android:paddingTop="5dp" >
 
-            <TextView
+           <com.ariisens.nearsens.customview.MyTextView
                 android:id="@+id/txtTipo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Scegli tipo"
                 android:singleLine="true"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#fff" />
         </LinearLayout>
 
@@ -47,13 +47,13 @@
                 android:background="#fff"
                  />
 
-            <TextView
+           <com.ariisens.nearsens.customview.MyTextView
                 android:id="@+id/txtCat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Scegli categoria"
                 android:gravity="center"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#fff" />
 
             <View
@@ -73,12 +73,13 @@
             android:paddingBottom="5dp"
             android:paddingTop="5dp" >
 
-            <TextView
+            <com.ariisens.nearsens.customview.MyTextView
                 android:id="@+id/txtKm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Km"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold"
                 android:textColor="#fff" />
         </LinearLayout>
     </LinearLayout>
