--- a/res/layout/dialog_option_map.xml
+++ b/res/layout/dialog_option_map.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
-            <TextView
+            <com.ariisens.nearsens.customview.MyTextView
                 android:id="@+id/ricercaBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -27,7 +27,7 @@
                 android:textColor="#fff"
                 android:textStyle="bold" />
 
-            <TextView
+            <com.ariisens.nearsens.customview.MyTextView
                 android:id="@+id/txtKm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -71,7 +71,7 @@
         android:gravity="center"
         android:orientation="vertical" >
 
-        <TextView
+        <com.ariisens.nearsens.customview.MyTextView
             android:id="@+id/txtOk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
