--- a/res/layout/dialog_select_category.xml
+++ b/res/layout/dialog_select_category.xml
@@ -17,7 +17,7 @@
         android:paddingLeft="5dp"
         android:paddingTop="10dp" >
 
-        <TextView
+        <com.ariisens.nearsens.customview.MyTextView
             android:id="@+id/txtTitleCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
