--- a/res/layout/infowindow_layout.xml
+++ b/res/layout/infowindow_layout.xml
@@ -5,79 +5,102 @@
     android:padding="5dp"
     android:orientation="vertical" >
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        
+        android:background="@drawable/bk_infowindow_marker" >
+
+       
+
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/bk_ll_infowindow_marker"
+            android:orientation="vertical" >
+
+            <com.ariisens.nearsens.customview.MyTextView
+                android:id="@+id/marker_label"
+                android:layout_marginLeft="80dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Large Text"
+                
+                android:textColor="#fff"
+                android:padding="5dp"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#552b2b2b"
-            
-            android:padding="5dp"
-            android:orientation="horizontal" >
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/linearLayout1"
+            android:background="@drawable/bk_ll2_infowindow_marker"
+            android:orientation="vertical" >
 
-            <ImageView
-                android:id="@+id/marker_icon"
-                android:layout_width="72dp"
-                android:layout_height="72dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/carne" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/marker_label"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="5dp"
-                    android:text="Medium Text"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#772b2b2b"
-                    android:orientation="vertical" >
-
-                    <TextView
+               <com.ariisens.nearsens.customview.MyTextView
                         android:id="@+id/txtTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Small Text"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="80dp"
+               	android:paddingTop="1dp"
+               	android:paddingLeft="5dp"
+                android:textColor="#fff"
+                android:text="Large Text"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" >
-
-                        <TextView
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content" >
+                    <com.ariisens.nearsens.customview.MyTextView
+                        android:layout_marginLeft="80dp"
                             android:id="@+id/txtPrezzo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Small Text"
-                            android:layout_marginLeft="5dp"
+                            android:textColor="#fff"
+                           android:paddingLeft="5dp"
                             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-                        <TextView
+                        <com.ariisens.nearsens.customview.MyTextView
                             android:id="@+id/txtSconto"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Small Text"
                              android:layout_marginLeft="5dp"
+                             android:textColor="#fff"
                             android:textAppearance="?android:attr/textAppearanceSmall" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
+               </LinearLayout>
 
         </LinearLayout>
+        
+         <ImageView
+             android:padding="2dp"
+            android:id="@+id/marker_icon"
+            android:layout_width="72dp"
+            android:paddingLeft="10dp"
+            android:layout_height="72dp"
+            android:background="@drawable/bk_img_marker"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/carne" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="19dp"
+        android:orientation="vertical" >
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:src="@drawable/arrow" />
 
     </LinearLayout>
 
