--- a/res/layout/activity_offer_details.xml
+++ b/res/layout/activity_offer_details.xml
@@ -25,7 +25,7 @@
 
                 <ImageView
                     android:id="@+id/imgHeader"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="170dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/carne" />
@@ -119,6 +119,22 @@
                 </LinearLayout>
             </LinearLayout>
 
+            
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+
+                    <GridView
+                        android:id="@+id/gridView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        
+                        android:numColumns="3" >
+                    </GridView>
+
+                </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -169,7 +185,7 @@
                     android:id="@+id/map"
                     android:name="com.google.android.gms.maps.MapFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="140dp" />
+                    android:layout_height="160dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
