--- a/res/layout/activity_offer_details.xml
+++ b/res/layout/activity_offer_details.xml
@@ -7,7 +7,8 @@
     android:orientation="vertical"
     tools:context="com.ariisens.nearsens.offerdetails.OfferDetailsActivity" >
 
-    <ScrollView
+    <com.ariisens.nearsens.offerdetails.NotifyingScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
@@ -20,8 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/layout_offer_details"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical" >
 
                 <ImageView
                     android:id="@+id/imgHeader"
@@ -119,26 +119,21 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal" >
+
             
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
 
-                    <GridView
-                        android:id="@+id/gridView"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        
-                        android:numColumns="3" >
-                    </GridView>
-
-                </LinearLayout>
+                
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:background="@drawable/layout_offer_details"
                 android:orientation="vertical" >
 
@@ -232,6 +227,6 @@
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </com.ariisens.nearsens.offerdetails.NotifyingScrollView>
 
 </LinearLayout>
