--- a/res/layout/activity_offer_details.xml
+++ b/res/layout/activity_offer_details.xml
@@ -1,232 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e5e5e5"
-    android:orientation="vertical"
-    tools:context="com.ariisens.nearsens.offerdetails.OfferDetailsActivity" >
+    android:orientation="vertical" >
 
-    <com.ariisens.nearsens.offerdetails.NotifyingScrollView
-        android:id="@+id/scroll_view"
+    <FrameLayout
+        android:id="@+id/frame_offer_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/layout_offer_details"
-                android:orientation="vertical" >
-
-                <ImageView
-                    android:id="@+id/imgHeader"
-                    android:layout_width="match_parent"
-                    android:layout_height="170dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/carne" />
-
-                <com.ariisens.nearsens.customview.MyTextView
-                    android:id="@+id/txtTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:text="Carne di qualità Ferrarotto scontata"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                <com.ariisens.nearsens.customview.MyTextView
-                    android:id="@+id/txtPlace"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
-                    android:text="Macelleria da Pino"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingTop="10dp" >
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="vertical" >
-
-                        <com.ariisens.nearsens.customview.MyTextView
-                            android:id="@+id/lbl_discount"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Sconto"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textColor="#726e6e" />
-
-                        <com.ariisens.nearsens.customview.MyTextView
-                            android:id="@+id/txtDiscount"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="80%"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textColor="#726e6e" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="right"
-                        android:orientation="vertical" >
-
-                        <RelativeLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="right" >
-
-                            <com.ariisens.nearsens.customview.MyTextView
-                                android:id="@+id/txtPreviusPrice"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:text="56,20 €"
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textColor="#726e6e" />
-
-                            <View
-                                android:id="@+id/view1"
-                                android:layout_width="50dp"
-                                android:layout_height="1dp"
-                                android:layout_alignParentLeft="true"
-                                android:layout_centerVertical="true"
-                                android:background="#726e6e" />
-                        </RelativeLayout>
-
-                        <com.ariisens.nearsens.customview.MyTextView
-                            android:id="@+id/txtPrice"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="39,20 €"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:textColor="#76c2af"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal" >
-
-            
-
-                
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/layout_offer_details"
-                android:orientation="vertical" >
-
-                <com.ariisens.nearsens.customview.MyTextView
-                    android:id="@+id/lbl_desc"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:text="Descrizione"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textStyle="bold" />
-
-                <com.ariisens.nearsens.customview.MyTextView
-                    android:id="@+id/txtDesc"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:text="Questa offerta lalal lkalala lalala laalala lamslamd aslkdja lkadas klasld lkasd lkasjd"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
-
-                <com.ariisens.nearsens.customview.MyTextView
-                    android:id="@+id/txtScadenza"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:text="Offerta scade: "
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="#726e6e"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:background="#fff"
-                android:orientation="vertical" >
-
-                <fragment
-                    android:id="@+id/map"
-                    android:name="com.google.android.gms.maps.MapFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="160dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/layout_offer_details"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:paddingLeft="10dp" >
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:src="@drawable/address_icon" />
-
-                    <com.ariisens.nearsens.customview.MyTextView
-                        android:id="@+id/txtAddress"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:text="Via Lapponia n° 35, Genova 33400"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/layout_offer_details"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:paddingLeft="10dp" >
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:src="@drawable/website_icon" />
-
-                    <com.ariisens.nearsens.customview.MyTextView
-                        android:id="@+id/txtLink"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:text="Sito Web"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
-    </com.ariisens.nearsens.offerdetails.NotifyingScrollView>
+    </FrameLayout>
 
 </LinearLayout>
