--- a/res/layout/fragment_offer_details.xml
+++ b/res/layout/fragment_offer_details.xml
@@ -118,6 +118,8 @@
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
                     android:orientation="horizontal" >
+                    
+                    
                 </LinearLayout>
 
                 <LinearLayout
@@ -221,7 +223,7 @@
         <LinearLayout
             android:id="@+id/ll_load_detail_offer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="#fff"
             android:gravity="center"
             android:orientation="vertical" >
