--- a/res/layout/fragment_offer_details.xml
+++ b/res/layout/fragment_offer_details.xml
@@ -213,6 +213,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
+                            android:autoLink="web"
                             android:text="Sito Web"
                             android:textAppearance="?android:attr/textAppearanceSmall" />
                     </LinearLayout>
