--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -109,13 +109,15 @@
      </LinearLayout>
 
    
-
-     <LinearLayout
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:layout_alignParentLeft="true"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_container"
+    android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
-         android:orientation="vertical" >
+         android:orientation="vertical" 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+ 
            <ListView
          android:id="@+id/lvOffers"
          android:layout_width="match_parent"
@@ -123,7 +125,7 @@
          android:divider="@null"
          tools:listitem="@layout/cella_offerte" >
      </ListView>
-     </LinearLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
  </RelativeLayout>
 
