--- a/res/layout/cella_category.xml
+++ b/res/layout/cella_category.xml
@@ -22,7 +22,7 @@
     <View
         android:id="@+id/view1"
         android:layout_width="wrap_content"
-        android:background="#76c2af"
+        android:background="@color/cp"
         android:layout_height="1dp" />
 
 </LinearLayout>
