--- a/res/layout/dialog_option_map.xml
+++ b/res/layout/dialog_option_map.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#76c2af"
+        android:background="@color/cp"
         android:orientation="vertical" >
 
         <LinearLayout
@@ -58,7 +58,7 @@
     <View
         android:id="@+id/view1"
         android:layout_width="wrap_content"
-        android:background="#76c2af"
+        android:background="@color/cp"
         android:layout_height="1dp" />
 
     <LinearLayout
