--- a/res/layout/dialog_select_category.xml
+++ b/res/layout/dialog_select_category.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:background="#76c2af"
+        android:background="@color/cp"
         android:orientation="vertical"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
