--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,6 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.dcyjcghjghjghj.MainActivity" >
 
+     <item
+        android:id="@+id/action_camera"
+        android:orderInCategory="100"
+        android:icon="@drawable/camera"
+        android:title="Show map"
+        android:showAsAction="always"
+        app:showAsAction="always"
+      />
     <item
         android:id="@+id/action_map"
         android:orderInCategory="100"
@@ -11,6 +19,7 @@
         android:showAsAction="always"
         app:showAsAction="always"
       />
+     
  
 
 </menu>
