--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="nav_item_icon_tint_color">#333</color>
     <color name="nav_item_text_color">#333</color>
     <color name="cp">#3F51B5</color>
+    <color name="cpalfa">#333F51B5</color>
     <color name="cpd">#3949AB</color>
     <color name="ca">#5C6BC0</color>
 </resources>
