--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="nav_item_icon_tint_color">#333</color>
     <color name="nav_item_text_color">#333</color>
-    <color name="cp">#3F51B5</color>
-    <color name="cpalfa">#333F51B5</color>
-    <color name="cpd">#3949AB</color>
-    <color name="ca">#5C6BC0</color>
+    <color name="cp">#2196F3</color>
+    <color name="cpalfa">#332196F3</color>
+    <color name="cpd">#0D47A1</color>
+    <color name="ca">#90CAF9</color>
 </resources>
