--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -9,11 +9,11 @@
         <item name="windowNoTitle">true</item>
     </style>
     
-    <style name="titleShadow">
-        <item name="android:shadowColor">@color/cp</item>
-        <item name="android:shadowDx">3</item>
-         <item name="android:shadowDy">3</item>
-         <item name="android:shadowRadius">1.5</item>
+    <style name="titleShadow" parent="TextAppearance.AppCompat.Title">
+        <item name="android:shadowColor">#000</item>
+        <item name="android:shadowDx">8</item>
+         <item name="android:shadowDy">8</item>
+         <item name="android:shadowRadius">8</item>
     </style>
 
 
